media query header changes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                             fill="#ff2b85"></path>
                     </svg></span></div>
 
+                    <div class="underline"></div>
+
             <div class="btn-side"><button class="login-btn">Login</button> <button class="signup-btn">Sign up</button>
 
                 <button class="lang-btn"><svg aria-hidden="true" focusable="false" class="fl-none" width="24"
