remove font size error

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
                     <div class="list-your-restaurant">
-                        <h1 style="margin-left: 25px ; font-weight: 400; font-size:;">List your restaurant or shop on
+                        <h1 style="margin-left: 25px ; font-weight: 400;">List your restaurant or shop on
                             foodpanda</h1>
                         <p style="margin-left: 25px; font-weight: 350; font-size: larger;">Would you like millions of
                             new customers to enjoy your amazing food and groceries? <br> So would we!</p>
@@ -499,7 +499,7 @@
 
 
                     <div class="list-your-restaurant-2">
-                        <h1 style="margin-left: 25px ; font-weight: 400; font-size:;">foodpanda for businessa</h1>
+                        <h1 style="margin-left: 25px ; font-weight: 400; ">foodpanda for businessa</h1>
                         <p style="margin-left: 25px; font-weight: 350; font-size: larger;">Order lunch or fuel for
                             work-from-home, late nights in the office, corporate events, client meetings, and much more.
                         </p>
